Bug 1685434 - Respect fonts specified in the font.name-list.emoji preference even if this overrides the Unicode Emoji_Presentation style. r=m_kato

This is a minor adjustment to the font-selection heuristics implemented in bug 1371386:
for emoji codepoints, we should accept the font(s) specified in the font.name-list.emoji
preference even if it's a monochrome font for characters that would normally be expected
to use a color rendering, as this is the user's choice.

Differential Revision: https://phabricator.services.mozilla.com/D101162