gfx/thebes/gfxTextRun.cpp
@@ -3320,6 +3320,15 @@ gfxFont* gfxFontGroup::FindFontForChar(uint32_t aCh, uint32_t aPrevCh,
   // 2. search pref fonts
   gfxFont* font = WhichPrefFontSupportsChar(aCh, aNextCh, presentation);
   if (font) {
+    if (PrefersColor(presentation)) {
+      // For emoji, always accept the font from preferences even if it isn't
+      // actually a color-emoji font, as some users may explicitly choose to
+      // set their emoji font preference to a monochrome font like Symbola.
+      // So the font.name-list.emoji preference takes precedence over the
+      // Unicode presentation style here.
+      *aMatchType = FontMatchType::Kind::kPrefsFallback;
+      return font;
+    }
     if (CheckCandidate(font, FontMatchType::Kind::kPrefsFallback)) {
       return font;
     }
